@@ -74,6 +74,23 @@ class DrupalWebTestCase extends DrupalWebTestCaseCore {
     $db_prefix = $current_db_prefix;
     return $status == 'pass' ? TRUE : FALSE;
   }
+  
+  /**
+   * Get a node from the database based on its title.
+   *
+   * @param title
+   *   A node title, usually generated by $this->randomName().
+   *
+   * @return
+   *   A node object matching $title.
+   */
+  function drupalGetNodeByTitle($title) {
+//    $nodes = node_load_multiple(array(), array('title' => $title));
+//    // Load the first node returned from the database.
+//    $returned_node = reset($nodes);
+//    return $returned_node;
+    return node_load(array('title' => $title));
+  }
 
   /**
    * Creates a node based on default settings.
