@@ -2,6 +2,8 @@
 
 SimpleTest 6.x-2.8, xxxx-xx-xx (development version)
 ------------------------------
+- Bugs:
+   * #382334: drupalGetNodeByTitle uses node_load_multiple in 6.x.
 - Changes:
    * #346844: Clear language statics to remove locale module errors.
 
